--- a/Menja/Menja.html
+++ b/Menja/Menja.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Bubble Blast</title>
-    <link rel="stylesheet" href="Tower.css" />
+    <link rel="stylesheet" href="Menja.css" />
   </head>
   <body>
     <!-- Game canvas -->
