--- a/maze/Maze.html
+++ b/maze/Maze.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Bubble Blast</title>
-    <link rel="stylesheet" href="Bubble.css" />
+    <link rel="stylesheet" href="Maze.css" />
   </head>
   <body>
     <div id="gradient"></div>
@@ -55,7 +55,7 @@
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"
     ></script>
-    <script src="Bubble.js"></script>
+    <script src="Maze.js"></script>
   </body>
   <footer>
     <p>
